--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,7 @@
 {
-  "testEnvironment": "jest-environment-jsdom",
-  "testPathIgnorePatterns": ["<rootDir>/node_modules/"],
-  "moduleNameMapper": {
-    "\\.(css|less)$": "identity-obj-proxy",
-    "\\.svg$": "<rootDir>/src/__mocks__/react.svg.js"
-  }
+    "testEnvironment": "jest-environment-jsdom",
+    "testPathIgnorePatterns": ["<rootDir>/node_modules/"],
+    "moduleNameMapper": {
+        "\\.(css|less)$": "identity-obj-proxy"
+    }
 }
